--- a/website/package.json
+++ b/website/package.json
@@ -14,16 +14,17 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "2.2.0",
-    "@docusaurus/preset-classic": "2.2.0",
-    "@mdx-js/react": "^1.6.22",
-    "clsx": "^1.2.1",
-    "prism-react-renderer": "^1.3.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  },
-  "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.2.0"
+    "@docusaurus/core": "^2.2.0",
+    "@docusaurus/plugin-sitemap": "^2.2.0",
+    "@docusaurus/preset-classic": "^2.2.0",
+    "@mdx-js/react": "^1.6.21",
+    "bootstrap": "^5.2.3",
+    "clsx": "^1.1.1",
+    "docusaurus-plugin-matomo": "^0.0.6",
+    "prism-react-renderer": "^1.2.1",
+    "react": "^17.0.1",
+    "react-bootstrap": "^2.7.0",
+    "react-dom": "^17.0.1"
   },
   "browserslist": {
     "production": [
@@ -36,8 +37,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "engines": {
-    "node": ">=16.14"
   }
 }
